--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   whiteboard: ^1.0.0
   flutter_quill_extensions: ^11.0.0
   flutter_quill: ^11.2.0
+  pdf: ^3.11.3
+  path_provider: ^2.1.5
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
