--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   pdf: ^3.11.3
   path_provider: ^2.1.5
   share_plus: ^10.1.4
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
